# nexos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  ROADMAP.md  docker-compose.override.yml  docker-compose.yml  install_nexos.sh  nexos_cli.py  nexos_gateway.py  orchestrator.py  phase-C-deps-report.md  pyproject.toml  soic  uninstall_nexos.sh
.claude/: settings.json
.context/: codex-session-id
.github/workflows/: docker.yml  lint.yml  security.yml  test.yml
agents/knowledge/: pattern-matrix.json  personality-dimensions.json  sector-references.json  web-patterns-reference.md
agents/ph1-strategy/: _orchestrator.md  pattern-recommender-test-report.md  pattern-recommender.md
agents/ph5-qa/: _orchestrator.md
clients/_ARCHIVE/: USINE_RH_industrielle-2026-05-18-vestige
clients/_ARCHIVE/iusine-2026-05-18-vestige/: brief-client.json
clients/_ARCHIVE/l-usine-rh-2026-05-18-vestige/: brief-client.json
clients/_ARCHIVE/l-usinerh-2026-05-18-vestige/: brief-client.json
clients/_ARCHIVE/usine-rh-2026-05-18-vestige/: brief-client.json
clients/_e2e_validation_2026-05-08/: asset-plan.json  brand-identity.json  brief-client.json  design-tokens.json  interactions.json  nexos-changelog.json  pattern-recommendation.json  ph0-discovery-report.md  ph1-strategy-report.md  ph2-design-report.md  ph3-content-report.md  ph4-build-log.md  ph5-qa-report.md  responsive-strategy.json  runs.jsonl  scaffold-plan.json  section-manifest.json  seo-strategy.json  site-map-logic.json  soic-gates.json  soic-runs.jsonl  stack-decision.json  wireframes.json
clients/_e2e_validation_2026-05-08/site/: .eslintrc.json  .gitignore  (+8 more)
clients/beaumont-avocats/: brief-client.json  nexos-changelog.json  pattern-recommendation.json  ph5-qa-report.md  section-manifest.json  soic-gates.json  soic-runs.jsonl
clients/clinique-aura/: brief-client.json  nexos-changelog.json  pattern-recommendation.json  ph5-qa-report.md  section-manifest.json  soic-gates.json  soic-runs.jsonl
clients/collectif-nova/: brief-client.json  nexos-changelog.json  pattern-recommendation.json  section-manifest.json  soic-gates.json
clients/depanneur-nobert/: .gitignore  MIGRATED.md  asset-plan.json  brand-identity.json  brief-client.json  content-qa-report.json  design-tokens.json  fiche-da.md  interactions.json  nexos-changelog.json  pattern-recommendation.json  ph0-discovery-report.md  ph1-strategy-report.md  ph2-design-report.md  ph3-content-report.md  ph4-build-log.md  ph5-qa-report.md  responsive-strategy.json  runs.jsonl  scaffold-plan.json  section-manifest.json  seo-content.json  seo-strategy.json  site-map-logic.json  soic-gates.json  soic-runs.jsonl  stack-decision.json  wireframes.json
clients/electro-maitre-industriel/: brief-client.json  nexos-changelog.json  pattern-recommendation.json  ph5-qa-report.md  section-manifest.json  soic-gates.json  soic-runs.jsonl
clients/la-villa-du-sous-marin/: brief-client.json  soic-gates.json
clients/mark_systems_demo/: design-tokens.json  interactions.json  nexos-changelog.json  responsive-strategy.json  site-map-logic.json
clients/table-de-marguerite/: brief-client.json  nexos-changelog.json  pattern-recommendation.json  ph5-qa-report.md  section-manifest.json  soic-gates.json  soic-runs.jsonl
clients/vertex-pmo/: brief-client.json  nexos-changelog.json  pattern-recommendation.json  ph5-qa-report.md  section-manifest.json  soic-gates.json  soic-runs.jsonl
docs/: README.md  adding-agents.md  audit-2026-02-16.md  blueprint.md  docker.md  env.md  offre-services-mark-systems-complete_OFFICIAL.md  prompt-correction.md  prompts-usine-rh.md  runbook.md
docs/adr/: 001-multi-phase-soic-gates.md  002-multi-cli-hosting.md  003-auto-fix-d4-d8.md  004-knowledge-base-pattern-recommender.md  005-refactor-orchestrator-classes.md  006-logging-stdlib.md
nexos/: __init__.py  agent_registry.py  auto_fixer.py  brief_contract.py  brief_wizard.py  build_validator.py  changelog.py  cli_commands.py  config.py  deploy_decision.py  logging_config.py  module_registry.py  pipeline_config.py  port_allocator.py  session_launcher.py  tooling_manager.py  workflow_runner.py
nexos/modules/: __init__.py
orchestrator/: __init__.py  _shared.py  banner.py  brief.py  cli_args.py  cli_runner.py  converge.py  gate_display.py  gates.py  gates_persistence.py  knowledge.py  main.py  ph4_sync.py  phases.py  pipeline.py  plateau_recovery.py  preflight.py  prompts.py  reconciliation.py  score_injection.py  verify.py
scripts/: docker-build.sh  migrate_agent_frontmatter.py
templates/: brief-intake.md  vercel-headers.template.json
templates/nextjs/: cookie-consent-component.tsx
tests/: conftest.py  test_agent_registry.py  test_archive_integrity.py  test_auto_fixer.py  test_brief_contract.py  test_brief_preview_scorer_module.py  test_brief_synthesizer_module.py  test_brief_wizard.py  test_build_validator.py  test_build_validator_tests_check.py  test_changelog.py  test_cli_commands.py  test_cli_commands_extra.py  test_cli_entry.py  test_cli_runner_rate_limit.py  test_config.py  test_cumulative_layout_shift_gate.py  test_deploy_decision.py  test_deps_scan.py  test_e2e_orchestrator.py  test_format_gate_result.py  test_gates_persistence.py  test_headers_scan.py  test_intake_question_prioritizer_module.py  test_intake_validation.py  test_legal_gap_checker_module.py  test_lint_configured.py  test_logging_config.py  test_module_registry.py  test_mypy_clean.py  test_orchestrator_classes.py  test_orchestrator_package.py  test_osiris_scan.py  test_pattern_prerecommender_module.py  test_ph4_sync.py  test_phase_early_pe02.py  test_plateau_recovery.py  test_port_allocator.py  test_preflight_sh.py  test_prompt_intake.py  (+8 more)
tests/test_soic/: test_converger.py  test_feedback_router.py  test_gate_engine.py  test_iterator.py  test_models.py  test_report.py
tools/: a11y-scan.sh  alloc-port.sh  audit-archive-integrity.sh  deps-scan.sh  freeze-archive.sh  headers-scan.sh  lighthouse-scan.sh  osiris-scan.sh  parse-results.py  preflight.sh  ssl-scan.sh
(+358 files in other folders)
