[project]
name = "nexos"
version = "4.2.0-dev"
description = "NEXOS — Pipeline web autonome avec quality gates SOIC (v4.2.0 WIP)"
requires-python = ">=3.10"
authors = [{ name = "NEXOS Platform Team" }]
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
  "rich>=13.0,<14.0",
]

[project.optional-dependencies]
wizard = [
  "questionary>=2.0,<3.0",
]
api = [
  "fastapi>=0.100,<0.200",
  "uvicorn[standard]>=0.24,<0.40",
  "pydantic>=2.0,<3.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "jsonschema>=4.0",
]
all = [
  "nexos[wizard,api,dev]",
]

[project.scripts]
nexos = "nexos_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["nexos_cli", "orchestrator", "nexos_gateway"]
packages = ["nexos", "soic"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.yaml", "*.yml"]
