[project]
name = "nexos"
version = "4.2.0-dev"
description = "NEXOS — Pipeline web autonome avec quality gates SOIC (v4.2.0 WIP)"
requires-python = ">=3.10"
authors = [{ name = "NEXOS Platform Team" }]
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
  "rich>=13.0,<14.0",
]

[project.optional-dependencies]
wizard = [
  "questionary>=2.0,<3.0",
]
api = [
  "fastapi>=0.100,<0.200",
  "uvicorn[standard]>=0.24,<0.40",
  "pydantic>=2.0,<3.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "jsonschema>=4.0",
  "pre-commit>=3.7",
]
all = [
  "nexos[wizard,api,dev]",
]

[project.scripts]
nexos = "nexos_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["nexos_cli", "orchestrator", "nexos_gateway"]
packages = ["nexos", "soic"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.yaml", "*.yml"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  ".venv",
  "node_modules",
  "__pycache__",
  "archive",
  "soic",
  "clients",
  "output",
]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "SIM",
  "PTH",
  "RUF",
]
ignore = [
  "E501",
  "B008",
  "N806",
  "SIM108",
]
fixable = ["ALL"]
unfixable = [
  "B",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]
# orchestrator.py:
#   C901 — complexité (refonte planifiée phase O)
#   RUF001 — caractères Unicode intentionnels dans rendu UI rich (× pour poids
#            SOIC, ℹ pour info). Remplacer par ASCII dégraderait l'affichage.
"orchestrator.py" = ["C901", "RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["nexos", "soic", "orchestrator"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------------------------------------------------------
# mypy — chantier2-H (adoption progressive du type-checking)
# ----------------------------------------------------------------------------
# Stratégie : strict global "raisonnable" + soft `disallow_untyped_defs` par
# défaut, puis overrides "strict 100 %" sur les modules bas-niveau déjà
# typés. orchestrator.py est exclu (TODO refactor phase O/P).
[tool.mypy]
python_version = "3.10"
files = ["nexos", "nexos_cli.py"]

strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

# Adoption progressive : on n'exige pas que toutes les defs soient typées.
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Modules bas-niveau : typage 100 % attendu.
[[tool.mypy.overrides]]
module = [
  "nexos.config",
  "nexos.changelog",
  "nexos.brief_contract",
  "nexos.pipeline_config",
  "nexos.agent_registry",
  "nexos.logging_config",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Libs externes sans stubs publiés.
[[tool.mypy.overrides]]
module = [
  "rich.*",
  "questionary.*",
  "jsonschema.*",
  "audit_toolkit.*",
]
ignore_missing_imports = true

# soic est un paquet externe (symlink) avec son propre cycle de typage —
# on n'analyse pas ses sources via les imports.
[[tool.mypy.overrides]]
module = "soic.*"
ignore_missing_imports = true
follow_imports = "skip"

# Tests : soft (priorité à la lisibilité).
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
