[project]
name = "nexos"
version = "4.2.0-dev"
description = "NEXOS — Pipeline web autonome avec quality gates SOIC (v4.2.0 WIP)"
requires-python = ">=3.10"
authors = [{ name = "NEXOS Platform Team" }]
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
  "jsonschema>=4.0",
  "rich>=13.0,<14.0",
]

[project.optional-dependencies]
wizard = [
  "questionary>=2.0,<3.0",
]
api = [
  "fastapi>=0.100,<0.200",
  "uvicorn[standard]>=0.24,<0.40",
  "pydantic>=2.0,<3.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
all = [
  "nexos[wizard,api,dev]",
]

[project.scripts]
nexos = "nexos_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["nexos_cli", "nexos_gateway"]
packages = [
  "nexos",
  "nexos.modules",
  "nexos.modules.brief_synthesizer",
  "nexos.modules.hello",
  "nexos.modules.legal_gap_checker",
  "soic",
  "orchestrator",
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.yaml", "*.yml"]

# ----------------------------------------------------------------------------
# pytest + coverage — chantier2-I (filet de sécurité avant refactor O/P)
# ----------------------------------------------------------------------------
# Coverage scopée à `nexos/` :
#   * `soic/` est un symlink vers ../soic_v3 (paquet externe avec sa propre
#     suite à `tests/test_soic/`). L'inclure dans `source` déstabiliserait le
#     calcul (30+ modules infra non consommés par l'orchestrateur).
#   * `orchestrator.py` est exclu : god-object 1700 L planifié pour refactor
#     phases O et P. Les tests E2E (test_e2e_orchestrator.py) couvrent son
#     contrat externe ; la couverture ligne-à-ligne arrivera après refactor.
# Seuil 70 % calé sur le diagnostic chantier2 : passe en l'état.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-v",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources.*",
]
markers = [
  "e2e: end-to-end test (plus lent, scénario CLI complet)",
  "integration: test d'intégration (plusieurs modules)",
]

[tool.coverage.run]
source = ["nexos"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/archive/*",
  "*/soic_v3/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  ".venv",
  "node_modules",
  "__pycache__",
  "archive",
  "soic",
  "clients",
  "output",
]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",
  "SIM",
  "PTH",
  "RUF",
]
ignore = [
  "E501",
  "B008",
  "N806",
  "SIM108",
]
fixable = ["ALL"]
unfixable = [
  "B",
]

[tool.ruff.lint.per-file-ignores]
# tests/ :
#   N802 — fonctions snake_case (pytest convention)
#   RUF001 — caractères Unicode (× pour poids SOIC, μ pour score) : les
#            assertions doivent matcher exactement le rendu produit par
#            orchestrator/, qui ignore aussi RUF001 pour les mêmes raisons.
"tests/*" = ["N802", "RUF001"]
# orchestrator/ (package post-refactor chantier2-P) :
#   C901 — complexité (refonte planifiée phase O)
#   RUF001 — caractères Unicode intentionnels dans rendu UI rich (× pour poids
#            SOIC, ℹ pour info). Remplacer par ASCII dégraderait l'affichage.
"orchestrator/*.py" = ["C901", "RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["nexos", "soic", "orchestrator"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------------------------------------------------------
# mypy — chantier2-H (adoption progressive du type-checking)
# ----------------------------------------------------------------------------
# Stratégie : strict global "raisonnable" + soft `disallow_untyped_defs` par
# défaut, puis overrides "strict 100 %" sur les modules bas-niveau déjà
# typés. orchestrator.py est exclu (TODO refactor phase O/P).
[tool.mypy]
python_version = "3.10"
files = ["nexos", "nexos_cli.py"]

strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

# Adoption progressive : on n'exige pas que toutes les defs soient typées.
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Modules bas-niveau : typage 100 % attendu.
[[tool.mypy.overrides]]
module = [
  "nexos.config",
  "nexos.changelog",
  "nexos.brief_contract",
  "nexos.pipeline_config",
  "nexos.agent_registry",
  "nexos.logging_config",
  "nexos.module_registry",
  "nexos.workflow_runner",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Libs externes sans stubs publiés.
[[tool.mypy.overrides]]
module = [
  "rich.*",
  "questionary.*",
  "jsonschema.*",
  "audit_toolkit.*",
]
ignore_missing_imports = true

# soic est un paquet externe (symlink) avec son propre cycle de typage —
# on n'analyse pas ses sources via les imports.
[[tool.mypy.overrides]]
module = "soic.*"
ignore_missing_imports = true
follow_imports = "skip"

# orchestrator/ (post-refactor chantier2-P) : typage progressif, mêmes règles
# que l'ancien orchestrator.py (# mypy: ignore-errors). Le contrat externe
# est verrouillé par tests/test_e2e_orchestrator.py et les tests de classes.
[[tool.mypy.overrides]]
module = "orchestrator.*"
ignore_errors = true

# Tests : soft (priorité à la lisibilité).
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
